# cargo-subspace

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: rust.yml
src/: cli.rs  discover.rs  graph.rs  lib.rs  main.rs  proc_macros.rs  rust_project.rs  util.rs
