[package]
name = "cargo-subspace"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.22.0"
clap = { version = "4.5.48", features = ["derive"] }
pprof = { version = "0.15.0", features = ["flamegraph"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json"] }

[build-dependencies]
anyhow = "1.0.100"

[profile.release]
debug = "full"
strip = "none"
