[package]
name = "cargo-subspace"
description = "A tool to make rust-analyzer work better with very large cargo workspaces"
license = "MIT"
version = "0.2.1"
edition = "2024"
keywords = ["rust-analyzer", "cargo", "workspace", "tools"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
repository = "https://github.com/ethowitz/cargo-subspace"
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
cargo_metadata = "0.22.0"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
pprof = { version = "0.15.0", features = ["flamegraph"] }

[build-dependencies]
anyhow = "1.0.100"

[profile.release]
debug = "full"
strip = "none"
